2001-12-06  Ulrich Drepper  <drepper@redhat.com>

	* libio/vasprintf.c (_IO_vasprintf): Free buffer on failure.
	* assert/assert.c: Check result of __asprintf call and don't use
	string if it failed.
	* assert/assert-perr.c: Likewise.
	* inet/rcmd.c: Likewise.
	* locale/programs/localedef.c (main): Check result of
	construct_output_path and exit if it failed.
	(construct_output_path): Check result of asprintf and mkdir calls and
	fail if they failed.
	* posix/getopt.c: Check result of __asprintf calls and fail if
	they failed.
	Patch by Dmitry V. Levin <ldv@alt-linux.org>.

2001-12-05  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/strcasecmp.c (__strcasecmp): Little performance
	patch.
	* sysdeps/generic/strncase.c: Likewise.
	* string/tester.c: Add tests for strcasecmp and strncasecmp.

2001-12-05  Geoff Keating  <geoffk@redhat.com>

	* scripts/cpp: Test the exit status from 'type', not 'awk'.

	* sysdeps/powerpc/__longjmp.S: Don't restore FP registers.
	* sysdeps/powerpc/fpu/__longjmp.S: Do restore FP registers.
	* sysdeps/powerpc/setjmp.S: Don't save FP registers.
	* sysdeps/powerpc/fpu/setjmp.S: Do save FP registers.
	* sysdeps/powerpc/fclrexcpt.c: Move to...
	* sysdeps/powerpc/fpu/fclrexcpt.c: ... here.
	* sysdeps/powerpc/fpu_control.h: Move to...
	* sysdeps/powerpc/fpu/fpu_control.h: ... here.

2001-12-05  Ulrich Drepper  <drepper@redhat.com>

	* iconvdata/ibm1129.h: Remove duplicate mappings.
	* iconvdata/ibm937.c: Handle overflow errors.  Handle new tables.
	* iconvdata/ibm937.h: Reorganize table to safe a lot of space.
	Patch by Masahide Washizawa <WASHI@jp.ibm.com>.

	* timezone/zic.c: Fix handling of turnaround times.
	Patch by Arthur David Olson <olsona@dc37a.nci.nih.gov>.

2001-12-02  Moshe Olshansky  <OLSHANSK@il.ibm.com>

	* sysdeps/ieee754/dbl-64/e_remainder.c (__ieee754_remainder): Fix
	overflow problem.

2001-12-05  Ulrich Drepper  <drepper@redhat.com>

	* posix/regex.c: For use outside glibc defined bounded pointer