@@ -59,6 +59,7 @@ dnl Arguments to specify presence of other packages/features.
 AC_ARG_WITH(fp, dnl
 [  --with-fp		  if using floating-point hardware [default=yes]],
 	    with_fp=$withval, with_fp=yes)
+AC_SUBST(with_fp)
 AC_ARG_WITH(binutils, dnl
   --with-binutils=PATH	  specify location of binutils (as and ld),
 	    path_binutils=$withval, path_binutils='')
